# hashmark

./: .clinerules  .cursorrules  .env.example  .gitignore  .kernignore  .windsurfrules  AGENTS.md  AGENT_COMPANY_REPORT.md  AUDIT-REPORT.md  AUDIT.md  CLAUDE.md  COMPETITOR-AUDIT.md  CONDUCTOR-COMPONENTS.md  CONDUCTOR-DESIGN.md  CONDUCTOR-PARITY.md  CONDUCTOR_ANALYSIS.md  CONDUCTOR_AUDIT.md  DESIGN.md  EMDASH_AUDIT.md  FLOWS.md  GEMINI.md  HARNESS-PLATFORM.md  LICENSE  PLAN.md  README.md  SESSION-HANDOFF-2026-04-01.md  SESSION-HANDOFF-2026-04-02-B.md  SESSION-HANDOFF-2026-04-02-C.md  SESSION-HANDOFF-2026-04-02.md  SESSION-HANDOFF-2026-04-03.md  SESSION-HANDOFF-FEATURES.md  STEAL-FROM-CLAUDE-CODE.md  STUDIO.md  TODO.md  bin.ts  commitlint.config.js  cspell.json  eslint.config.mjs  handoff-2026-03-19-1310-shell-overhaul.md  handoff-2026-03-19-2110-massive-studio-session.md  (+9 more)
.claude/: settings.json
.cursor/: mcp.json
.github/: copilot-instructions.md
.hashmark/: index.json  studio.db  studio.db-shm  studio.db-wal
.husky/: pre-commit  pre-push
app/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: checkpoint.rs  commands.rs  compact.rs  db.rs  harness.rs  issues.rs  lib.rs  main.rs  mcp.rs  mcp_oauth.rs  routines.rs  sessions.rs  store.rs  stream.rs  tools.rs
assets/: icon.icns
client/: index.html  vite.config.ts
docs/: ANALYTICS.md  API_CONTRACTS.md  ARCHITECTURE.md  BUSINESS.md  PRODUCT.md  (+14 more)
(+686 files in other folders)
