[package]
name = "hashmark"
version = "0.1.0"
description = "hashmark desktop app"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hashmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
urlencoding = "2"
chrono = "0.4"
